Fix card overflow error

--- a/css/main.css
+++ b/css/main.css
@@ -730,7 +730,7 @@ footer > .copyright{
   overflow: hidden;
   -ms-text-overflow: ellipsis;
   text-overflow: ellipsis;
-  max-height: 50px;
+  max-height: 60px;
   margin-top: 3px;
 }
 .card > .card-content .caption h3{
